--- a/zenoh_native/Cargo.toml
+++ b/zenoh_native/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zenoh = "0.10.1-rc"
-async-std = "1"
-futures = "0.3"
+zenoh = "0.11.0"
+tokio = "1.35.1"
 ctrlc-handler = "0.1.2"
 
 [[bin]]
